Header Section Done (Nav & Hero Section)

--- a/index.html
+++ b/index.html
@@ -7,6 +7,35 @@
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-    
+    <header>
+        <nav>
+            <div class="container">
+                <div class="nav-container">
+                    <h2 class="logo">Borhan.S</h2>
+                    <button class="btn">Download Resume</button>
+                </div>
+            </div>
+        </nav>
+        <div class="hero-section">
+            <div class="container">
+                <div class="hero-content-container">
+                    <div class="hero-content">
+                        <div class="hero-img">
+                            <img src="./assets/hero-img.png" alt="">
+                        </div>
+                        <h1 class="hero-title">"In the near future, I hope to become a Developer."</h1>
+                        <p class="paragraph">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
+                        <button class="btn">Contact With Me</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </header>
+    <main>
+
+    </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
