Why Web Development Section Done

--- a/index.html
+++ b/index.html
@@ -32,7 +32,49 @@
         </div>
     </header>
     <main>
-
+        <div class="container">
+            <section class="why-web-development">
+                <div class="section-head">
+                    <h2 class="section-title">Why Web Development??</h2>
+                    <p class="paragraph">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
+                </div>
+                <div class="web-development-cards-container">
+                    <!-- card 1 -->
+                    <div class="web-development-card">
+                        <div class="web-development-card-content">
+                            <h4>I will Do Coding and Change The World</h4>
+                            <p class="paragraph">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                            <button class="btn">Learn More</button>
+                        </div>
+                        <div class="web-development-card-img">
+                            <img src="./assets/dev-1.png" alt="">
+                        </div>
+                    </div>
+                    <!-- card 2 -->
+                    <div class="web-development-card">
+                        <div class="web-development-card-img">
+                            <img src="./assets/dev-2.png" alt="">
+                        </div>
+                        <div class="web-development-card-content">
+                            <h4>I will help People by creating Modern Web System</h4>
+                            <p class="paragraph">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                            <button class="btn">Learn More</button>
+                        </div>
+                    </div>
+                    <!-- card 3 -->
+                    <div class="web-development-card">
+                        <div class="web-development-card-content">
+                            <h4>I will Do Coding and Change The World</h4>
+                            <p class="paragraph">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                            <button class="btn">Learn More</button>
+                        </div>
+                        <div class="web-development-card-img">
+                            <img src="./assets/dev-3.png" alt="">
+                        </div>
+                    </div>
+                </div>
+            </section>
+        </div>
     </main>
     <footer>
 
