My Inspiration Section Done

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
     </header>
     <main>
         <div class="container">
+            <!-- Why Web Development Section -->
             <section class="why-web-development">
                 <div class="section-head">
                     <h2 class="section-title">Why Web Development??</h2>
@@ -72,6 +73,16 @@
                             <img src="./assets/dev-3.png" alt="">
                         </div>
                     </div>
+                </div>
+            </section>
+            <!-- My Inspiration -->
+            <section class="my-inspiration">
+                <div class="section-head">
+                    <h2 class="section-title">My Inspiration</h2>
+                    <p class="paragraph">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
+                </div>
+                <div class="inspiration-video-container">
+                    <iframe width="100%" height="550px" src="https://www.youtube.com/embed/mD7t9Tq4_Lw?si=Zp1z0v7RF7HNlgEY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                 </div>
             </section>
         </div>
