--- a/index.html
+++ b/index.html
@@ -85,6 +85,36 @@
                     <iframe width="100%" height="550px" src="https://www.youtube.com/embed/mD7t9Tq4_Lw?si=Zp1z0v7RF7HNlgEY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                 </div>
             </section>
+            <!-- My Current Target Section -->
+            <section class="current-target">
+                <div class="section-head">
+                    <h2 class="section-title">My Current Target</h2>
+                    <p class="paragraph">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
+                </div>
+                <div class="current-target-card-container">
+                    <!-- Card 1 -->
+                    <div class="current-target-card html-card">
+                        <img src="./assets/html.png" alt="">
+                        <h4>HTML</h4>
+                        <p class="paragraph">Lorem Ipsum is simply dummy text of the printing.</p>
+                        <a href="">Learn More</a>
+                    </div>
+                    <!-- Card 2 -->
+                    <div class="current-target-card css-card">
+                        <img src="./assets/css.png" alt="">
+                        <h4>CSS</h4>
+                        <p class="paragraph">Lorem Ipsum is simply dummy text of the printing.</p>
+                        <a href="">Learn More</a>
+                    </div>
+                    <!-- Card 3 -->
+                    <div class="current-target-card js-card">
+                        <img src="./assets/js.png" alt="">
+                        <h4>HTML</h4>
+                        <p class="paragraph">Lorem Ipsum is simply dummy text of the printing.</p>
+                        <a href="">Learn More</a>
+                    </div>
+                </div>
+            </section>
         </div>
     </main>
     <footer>
