My Next Target Section Done

--- a/index.html
+++ b/index.html
@@ -115,6 +115,48 @@
                     </div>
                 </div>
             </section>
+            <!-- My Next Target -->
+            <section class="next-target">
+                <div class="section-head">
+                    <h2 class="section-title">My Next Target</h2>
+                    <p class="paragraph">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
+                </div>
+                <div class="next-target-container">
+                    <!-- Card 1 -->
+                    <div class="next-target-card">
+                        <div class="next-target-card-img">
+                            <img src="./assets/react.png" alt="">
+                        </div>
+                        <div class="next-target-card-content">
+                            <h4>React JS</h4>
+                            <p class="paragraph">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
+                            <a href="">Learn More</a>
+                        </div>
+                    </div>
+                    <!-- Card 2 -->
+                    <div class="next-target-card">
+                        <div class="next-target-card-img">
+                            <img src="./assets/nodejs.png" alt="">
+                        </div>
+                        <div class="next-target-card-content">
+                            <h4>Node JS</h4>
+                            <p class="paragraph">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
+                            <a href="">Learn More</a>
+                        </div>
+                    </div>
+                    <!-- Card 3 -->
+                    <div class="next-target-card">
+                        <div class="next-target-card-img">
+                            <img src="./assets/mongodb.png" alt="">
+                        </div>
+                        <div class="next-target-card-content">
+                            <h4>MongoDB JS</h4>
+                            <p class="paragraph">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
+                            <a href="">Learn More</a>
+                        </div>
+                    </div>
+                </div>
+            </section>
         </div>
     </main>
     <footer>
