Support Section Done

--- a/index.html
+++ b/index.html
@@ -157,6 +157,19 @@
                     </div>
                 </div>
             </section>
+            <!-- Support Section -->
+            <section class="support-section">
+                <div class="support-content">
+                    <div class="section-head">
+                        <h2 class="section-title">I Need Support</h2>
+                        <p class="paragraph">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                    </div>
+                    <form action="">
+                        <input type="text" name="" id="" placeholder="Suggest me any feedback for me">
+                        <input type="submit" value="Submit" class="btn">
+                    </form>
+                </div>
+            </section>
         </div>
     </main>
     <footer>
