--- a/index.html
+++ b/index.html
@@ -173,7 +173,18 @@
         </div>
     </main>
     <footer>
-
+        <div class="container">
+            <div class="footer-container">
+                <div class="footer-text">
+                    <h5>An Open Commitment by Borhan Siddque</h5>
+                </div>
+                <div class="footer-social">
+                    <img src="./assets/facebook.png" alt="">
+                    <img src="./assets/github.png" alt="">
+                    <img src="./assets/linkedin.png" alt="">
+                </div>
+            </div>
+        </div>
     </footer>
 </body>
 </html>
